[gd_scene load_steps=5 format=2]

[ext_resource path="res://ChiKareGo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ChiKareGo.tres" type="DynamicFont" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.447059, 0.14902, 0.439216, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 93.0
margin_top = 41.0
margin_right = 227.0
margin_bottom = 139.0
custom_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 134.0
margin_bottom = 28.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 134.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 1, 0.72549, 0, 1 )
text = "Growing Up"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 134.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 40.0
margin_right = 93.0
margin_bottom = 50.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 53.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 53.0
margin_bottom = 14.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 7.0
margin_bottom = 14.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.72549, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 53.0
margin_bottom = 14.0
rect_min_size = Vector2( 42, 0 )
rect_pivot_offset = Vector2( 288.78, 79.6416 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.72549, 0, 1 )
text = "Start"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 18.0
margin_right = 53.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 53.0
margin_bottom = 14.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 7.0
margin_bottom = 14.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.72549, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 11.0
margin_right = 53.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.72549, 0, 1 )
text = "Options"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 53.0
margin_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_right = 53.0
margin_bottom = 14.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 7.0
margin_bottom = 14.0
rect_min_size = Vector2( 7, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.72549, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 11.0
margin_right = 53.0
margin_bottom = 14.0
rect_min_size = Vector2( 42, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 1, 0.72549, 0, 1 )
text = "Exit"
